@@ -1,3 +1,12 @@
+2005-01-18 David Gilbert <david.gilbert@object-refinery.com>
+
+	* javax/swing/DefaultListModel.java
+	(add): fire correct event,
+	(addElement): corrected interval indices in event,
+	(clear): corrected upper bound for interval, only fire event if
+	list is not empty,
+	(setSize): fire appropriate event.
+
 2005-01-17  Graydon Hoare  <graydon@redhat.com>
 
 	* gnu/awt/xlib/XEventLoop.java: Add non-blocking event mode.
